Additional changes on templates and additional assets
Added assets for each sektor and changes over templates file

--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <ul class="flex">
                 <li class="font-bold uppercase text-lg">Kawal Pembangunan</li>
                 <li><a href="{{ url_for('home') }}"
-                        class="mx-16 ease-linear duration-100">Home
+                        class="mx-16 ease-linear duration-100">Beranda
                     </a>
                 </li>
                 <li>
